# Top-Mapping

./: #README.md#  #parameters.py#  .#README.md  .#model.py  .#parameters.py  CMakeLists.txt  README.md  ali.py  ali_clc.py  checkpoint  clear.sh  data  log.txt  logs  main.py  model.py  model3D.py  model_feature.py  model_simpleCYC.py  module.py  module3D.py  module_simpleCYC.py  package.xml  parameters.py  plotDraw.py  plotDraw_conditionCYC.py  plotDraw_simpleCYC.py  result  results  utils.py
backup/: ali.py  ali_clc.py
data/: loam  new_loam
gtav_cls/: GTAV
pyseqslam/: demo.py  demo_GTAV.py  seqslam.py
results/ALI_CYC/: run_.,tag_clc_loss.csv  run_.,tag_d_J_loss.csv  run_.,tag_d_X_loss.csv  run_.,tag_d_Z_loss.csv  run_.,tag_d_fJ_loss.csv  run_.,tag_decoder_loss.csv  run_.,tag_encoder_loss.csv  test_T10_R1_10_PR.json  test_T10_R1_11_PR.json  test_T10_R1_12_PR.json  test_T10_R1_13_PR.json  test_T10_R1_14_PR.json  test_T10_R1_15_PR.json  test_T10_R1_16_PR.json  test_T10_R1_17_PR.json  test_T10_R1_18_PR.json  test_T10_R1_19_PR.json  test_T10_R1_20_PR.json  test_T10_R1_21_PR.json  test_T10_R1_22_PR.json  test_T10_R1_23_PR.json  test_T10_R1_6_PR.json  test_T10_R1_7_PR.json  test_T10_R1_8_PR.json  test_T10_R1_9_PR.json  test_T10_R2_10_PR.json  test_T10_R2_11_PR.json  test_T10_R2_12_PR.json  test_T10_R2_13_PR.json  test_T10_R2_14_PR.json  test_T10_R2_15_PR.json  test_T10_R2_16_PR.json  test_T10_R2_17_PR.json  test_T10_R2_18_PR.json  test_T10_R2_19_PR.json  test_T10_R2_20_PR.json  test_T10_R2_21_PR.json  test_T10_R2_22_PR.json  test_T10_R2_23_PR.json  test_T10_R2_6_PR.json  (+57 more)
(+51 files in other folders)
